# win-ctl-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  docker-compose.yml  package.json  pnpm-lock.yaml  wrangler.jsonc
.github/: protection.yml
.github/release-notes/: beta.md  stable.md
.github/workflows/: docs.yml  release-beta.yml  release.yml
app/: Cargo.toml
app/src/: cli.rs  lib.rs  logging.rs
app/src/commands/: compose.rs  compose_test.rs  mod.rs  screen.rs  window.rs
app/src/core/: mod.rs  runtime_config.rs
app/src/profile/: mod.rs  model.rs
app/tests/: cli_validation.rs
docker/: node-helper.Dockerfile
docs/: index.md  package.json
docs/changelog/: index.md
docs/explanation/: faq.md
docs/explanation/win-ctl-cli-score/: native.md
docs/how-to/: install.md  use-profiles.md
docs/zh-CN/: index.md
docs/zh-CN/changelog/: index.md
docs/zh-CN/explanation/: faq.md
docs/zh-CN/explanation/win-ctl-cli-score/: native.md
docs/zh-CN/how-to/: install.md  use-profiles.md
scripts/docs/: agent-meta.ps1  agent-meta.sh  agent-routes.ps1  agent-routes.sh  alignment.ps1  alignment.sh  check.ps1  check.sh  links.ps1  links.sh
scripts/manage/: install.ps1  install.sh
scripts/release/: accept.ps1  accept.sh  checksum.ps1  checksum.sh  collate.ps1  collate.sh  common.ps1  common.sh  package.ps1  package.sh  skill.ps1  skill.sh  smoke.ps1  smoke.sh  verify.ps1  verify.sh
